@@ -241,8 +241,8 @@ describe('ShaDa support code', function()
     eq("'10", api.nvim_get_option_value('viminfo', {}))
     eq("'10", api.nvim_get_option_value('shada', {}))
     nvim_command('set all&')
-    eq("!,'100,<50,s10,h", api.nvim_get_option_value('viminfo', {}))
-    eq("!,'100,<50,s10,h", api.nvim_get_option_value('shada', {}))
+    eq("!,'100,<50,s10,h,r/tmp/,r/private/", api.nvim_get_option_value('viminfo', {}))
+    eq("!,'100,<50,s10,h,r/tmp/,r/private/", api.nvim_get_option_value('shada', {}))
   end)
 
   it('is able to set &shada after &viminfo using :set', function()
